--- a/src/global.css
+++ b/src/global.css
@@ -8,9 +8,15 @@
   --gray-800: #202024;
   --gray-900: #121214;
 
+  --green-300: #00B373;
   --green-500: #00875f;
-}
 
+  --red-500: #F75a68;
+}
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
+}
 * {
   margin: 0;
   padding: 0;
@@ -18,16 +24,13 @@
 }
 
 body {
-  background: var(--gray-900);
+  background-color: var(--gray-900);
   color: var(--gray-300);
   -webkit-font-smoothing: antialiased;
 }
 
-body,
-input,
-textarea,
-button {
-  font-size: "Roboto", sans-serif;
+body, input, textarea, button {
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1rem;
 }
